--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <header class="clearfix">
       <h1>Флэшкарточкер</h1>
       <ul class="navigation-links">
-        <li><%= link_to 'Все карточки', controller: 'cards' %></li>
+        <li><%= link_to 'Все карточки', '/cards' %></li>
         <li><a href="#">Добавить карточку</a></li>
       </ul>
     </header>
