--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,17 +1,30 @@
-<h1>Cards</h1>
+<div class="container">
+  <div class="jumbotron vertical-center">
+    <h1>Cards</h1>
 
-<table class="table table-bordered">
-  <tr>
-    <th>Original text</th>
-    <th>Translated text</th>
-    <th>Review date</th>
-  </tr>
-
-  <% @cards.each do |card| %>
+    <table class="table table-bordered">
+      <thead>
       <tr>
-        <td><%= card.original_text %></td>
-        <td><%= card.translated_text %></td>
-        <td><%= card.review_date.strftime('%d/%m/%Y') %></td>
+        <th>Original text</th>
+        <th>Translated text</th>
+        <th>Review date</th>
+        <th colspan="3">Action</th>
       </tr>
-  <% end %>
-</table>
+      </thead>
+      <tbody>
+      <% @cards.each do |card| %>
+          <tr>
+            <td><%= card.original_text %></td>
+            <td><%= card.translated_text %></td>
+            <td><%= card.review_date.strftime('%d/%m/%Y') %></td>
+            <td><%= link_to 'Show', card_path(card) %></td>
+            <td><%= link_to 'Edit', edit_card_path(card) %></td>
+            <td><%= link_to 'Destroy', card_path(card),
+                            method: :delete,
+                            data: {confirm: 'Are you sure?'} %></td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
