--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -19,7 +19,8 @@
         <div class="row">
           <div class="col-sm-offset-5 col-sm-2 text-center">
             <%= f.submit "#{ card.new_record? ? 'Create' : 'Edit'}",
-                         class: "btn btn-primary center-block" %>            </div>
+                         class: "btn btn-primary center-block" %>
+          </div>
         </div>
       </div>
     </div>
