--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,23 @@
-<section>
-  <p style="font-size: 22px;">
-    Первый в мире удобный менеджер флеш-карточек. Именно так.
-  </p>
-</section>
+<div class="container-fluid">
+  <section>
+    <p style="font-size: 22px;">
+      Первый в мире удобный менеджер флеш-карточек. Именно так.
+    </p>
+  </section>
+
+  <%= form_tag(check_path, method: 'get') do %>
+      <div class='check-card'>
+        <div class="center-block">
+          <h2>Освежи память!</h2>
+          <h3><%= @card.translated_text %></h3>
+          <% if flash[:notice] %>
+              <p class="bg-success">
+                <%= flash[:notice] %></p>
+          <% end %>
+          <%= text_field_tag :original_text, params[:original_text], :placeholder => 'Input answer' %>
+          <%= hidden_field_tag :id, @card.id %>
+          <%= submit_tag 'Send' %>
+        </div>
+      </div>
+  <% end %>
+</div>
